about section mobile responsive fixed

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@300;400;500;600&family=League+Gothic&display=swap');
 
 .container {
-    height: 105vh;
+    min-height: 105vh;
     // margin-left: 15rem;
     min-width: 100%;
     background-color: #181838;
@@ -10,7 +10,7 @@
     align-items: center;
 
     @media screen and (max-width: 880px) {
-        height: 100vh;
+        min-height: 100vh;
     }
 
     .details {
@@ -33,12 +33,17 @@
         margin-left: 3rem;
 
         @media screen and (max-width: 880px) {
-            line-height: 1.3;
+            line-height: 1;
+            font-size: 0.8rem;
             margin-left: 0;
         }
         
         .aboutDetails {
             font-size: 1.2rem;
+
+            @media screen and (max-width: 880px){
+                font-size: 1rem;
+            }
         }
 
         .skill {
@@ -126,6 +131,15 @@
         width: 300px;
         aspect-ratio: 9.9/10;
     }
+
+    @media screen and (max-width: 400px) {
+        margin: 0.5rem 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 200px;
+    }
 }
 
 .center {
@@ -143,10 +157,17 @@
         padding: 10px;
     }
 
+    @media screen and (max-width: 400px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
 }
 
 .white {
-    min-height: 72%;
+    min-height: 50%;
     position: relative;
     aspect-ratio: 1;
     border: 4px solid #B1DAE7;
@@ -159,6 +180,11 @@
     border-radius: 50%;
     margin: 8px;
     object-fit: cover;
+
+    @media screen and (max-width: 400px) {
+        height: 120px;
+        width: 120px;
+    }
 }
 
 .name {
