--- a/styles/Education.module.scss
+++ b/styles/Education.module.scss
@@ -32,7 +32,9 @@
         color: #B1DAE7;
 
         @media screen and (max-width: 880px) {
-            line-height: 1.3;
+            line-height: 1;
+            font-size: 0.8rem;
+            margin-left: 0;
         }
 
         .college2 {
@@ -66,6 +68,11 @@
                 width: 170px;
                 height: 170px;
             }
+
+            @media screen and (max-width: 400px) {
+                width: 140px;
+                height: 140px;
+            }
         }
 
         .eduImg2 {
@@ -80,6 +87,11 @@
             @media screen and (max-width: 600px) {
                 width: 190px;
                 height: 180px;
+            }
+
+            @media screen and (max-width: 400px) {
+                width: 150px;
+                height: 140px;
             }
         }
 
