--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -34,7 +34,9 @@
         // margin-left: 0.5rem;
 
         @media screen and (max-width: 880px) {
-            line-height: 1.3;
+            line-height: 1;
+            font-size: 0.8rem;
+            margin-left: 0;
         }
 
         .firstRow {
@@ -65,9 +67,9 @@
 
             @media screen and (max-width: 880px) {
                 width: 100px;
-                height: 100px;
+                height: 70px;
                 margin: 3px !important;
-                font-size: 1.5rem;
+                font-size: 1rem;
             }
         }
 
